# ai-news-agent

./: .gitignore  README.md  create_desktop_shortcut.py  get_news.bat  get_news.py  pyproject.toml  requirements.txt  start_news_app.bat  start_news_app.py  start_news_app_silent.vbs
config/: sources.yaml
src/ai_news_agent/: brief.py  cli.py  company_logos.py  config.py  dedupe.py  diagnostics.py  fetcher.py  logging_utils.py  models.py  parser.py  pdf_report.py  reviewer.py  security.py  storage.py  translator.py  web.py
src/ai_news_agent/static/: styles.css
src/ai_news_agent/templates/: diagnostics.html  index.html
tests/: test_dedupe.py  test_parser.py  test_reviewer.py
