[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-agent"
version = "0.1.0"
description = "Local CLI tool for fetching AI technology news from public RSS feeds."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "feedparser>=6.0.11",
  "PyYAML>=6.0",
  "Flask>=3.0",
  "deep-translator>=1.11",
  "Pillow>=10.0",
  "reportlab>=4.0",
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
offline-translate = [
  "argostranslate>=1.9",
]

[project.scripts]
ai-news = "ai_news_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
